# stupid-swarm

./: .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: circle.cpp  circle.h  custom_imgui.cpp  events.h  log.cpp  log.h  main.cpp  particle.cpp  particle.hpp
src/imgui/: custom_imgui.cpp  custom_imgui.hpp  swarm_settings_imgui.cpp  swarm_settings_imgui.hpp
src/renderer/: camera.cpp  camera.h  model.cpp  model.h  opengl-context.cpp  opengl-context.h  shader.cpp  shader.h
src/simulations/: moving_goal.cpp  moving_goal.hpp
